Set mColumns to nsnull after |delete| to prevent a crash. Bug 206437, r+sr=bryner, a=mkaply.