layout/xul/base/src/tree/src/nsTreeBodyFrame.cpp
@@ -3397,6 +3397,7 @@ nsTreeBodyFrame::EnsureColumns()
 {
   if (!mColumns || mColumnsDirty) {
     delete mColumns;
+    mColumns = nsnull;
     mColumnsDirty = PR_FALSE;
 
     nsCOMPtr<nsIContent> parent;
